istio.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: Gateway
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: springboot:networking.istio.io/Gateway:springboot/springboot-gateway
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1","kind":"Gateway","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"springboot:networking.istio.io/Gateway:springboot/springboot-gateway"},"name":"springboot-gateway","namespace":"springboot"},"spec":{"selector":{"istio":"ingressgateway"},"servers":[{"hosts":["springboot.floci.bright.zorbos.com"],"port":{"name":"http","number":80,"protocol":"HTTP"}}]}}
    creationTimestamp: "2026-08-02T14:34:59Z"
    generation: 1
    name: springboot-gateway
    namespace: springboot
    resourceVersion: "1505329"
    uid: 7020367e-0524-4d2b-ac21-52f395be0f28
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - springboot.floci.bright.zorbos.com
      port:
        name: http
        number: 80
        protocol: HTTP
- apiVersion: networking.istio.io/v1
  kind: VirtualService
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: springboot:networking.istio.io/VirtualService:springboot/springboot
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1","kind":"VirtualService","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"springboot:networking.istio.io/VirtualService:springboot/springboot"},"name":"springboot","namespace":"springboot"},"spec":{"gateways":["springboot-gateway"],"hosts":["springboot.floci.bright.zorbos.com"],"http":[{"name":"primary","route":[{"destination":{"host":"springboot"},"weight":100},{"destination":{"host":"springboot-canary"},"weight":0}]}]}}
    creationTimestamp: "2026-08-02T14:34:59Z"
    generation: 1
    name: springboot
    namespace: springboot
    resourceVersion: "1505313"
    uid: 158cde4a-cb00-422e-a814-081f81b300ec
  spec:
    gateways:
    - springboot-gateway
    hosts:
    - springboot.floci.bright.zorbos.com
    http:
    - name: primary
      route:
      - destination:
          host: springboot
        weight: 100
      - destination:
          host: springboot-canary
        weight: 0
kind: List
metadata:
  resourceVersion: ""
